--- a/package.json
+++ b/package.json
@@ -8,18 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
+    "apollo-server-micro": "^3.10.1",
+    "graphql": "^16.6.0",
+    "micro-cors": "^0.1.1",
     "next": "^12.0.7",
+    "nexus": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@types/node": "^16.3.2",
+    "@types/micro-cors": "^0.1.2",
+    "@types/node": "^16.11.56",
     "@types/react": "^17.0.14",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.0.8",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
