--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@prisma/client": "^4.2.1",
     "apollo-server-micro": "^3.10.1",
     "graphql": "^16.6.0",
