--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@auth0/nextjs-auth0": "^1.9.1",
     "@prisma/client": "^4.2.1",
     "apollo-server-micro": "^3.10.1",
     "graphql": "^16.6.0",
@@ -16,7 +17,9 @@
     "next": "^12.0.7",
     "nexus": "^1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
