--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "vercel-build": "prisma:generate && next build",
+    "prisma:generate": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@auth0/nextjs-auth0": "^1.9.1",
     "@prisma/client": "^4.2.1",
     "apollo-server-micro": "^3.10.1",
+    "aws-sdk": "^2.1205.0",
     "graphql": "^16.6.0",
     "micro-cors": "^0.1.1",
     "next": "^12.0.7",
