--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "prisma:generate": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate",
-    "vercel-build": "prisma:generate && next build"
+    "build": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate && next build",
+    "start": "next start"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
