--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate && next build",
-    "start": "next start"
+    "build": "prisma generate --data-proxy && next build",
+    "start": "next start",
+    "migrate": "DATABASE_URL=\"$MIGRATE_DATABASE_URL\" prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
