--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "prisma generate --data-proxy && next build",
     "start": "next start",
     "migrate": "DATABASE_URL=\"$MIGRATE_DATABASE_URL\" prisma migrate deploy",
-    "vercel-build": "prisma:generate && next build",
-    "prisma:generate": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate"
+    "prisma:generate": "",
+    "vercel-build": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate && next build"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
