--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "prisma generate --data-proxy && next build",
     "start": "next start",
-    "migrate": "DATABASE_URL=\"$MIGRATE_DATABASE_URL\" prisma migrate deploy",
-    "prisma:generate": "",
-    "vercel-build": "PRISMA_CLIENT_ENGINE_TYPE=\"dataproxy\" prisma generate && next build"
+    "migrate": "DATABASE_URL=\"$MIGRATE_DATABASE_URL\" prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
